typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            13,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts:2:2
  |
2 | /notregexp/a.foo();
  |  ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            15,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts:2:12
  |
2 | /notregexp/a.foo();
  |            ^

